Updated test case and added command line runner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url=${DB_UR:jdbc:h2:mem:testdb}
+#spring.datasource.url=jdbc:h2:~/test
+spring.datasource.driverClassName=${DB_DRIVER_CLASSNAME:org.h2.Driver}
+spring.datasource.username=${DB_USERNAME:sa}
+spring.datasource.password=${DB_PASSWORD:}
+spring.jpa.database-platform=${DB_PLATFORM:org.hibernate.dialect.H2Dialect}
+spring.h2.console.enabled=${CONSOLE_ENABLE:true}
+spring.h2.console.settings.web-allow-others=true
+spring.datasource.initialization-mode=${DB_INITIALIZATION_MODE:embedded}
+spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_AUTO:create-drop}
