--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=${DB_UR:jdbc:h2:mem:testdb}
-#spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=${DB_UR:jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1}
 spring.datasource.driverClassName=${DB_DRIVER_CLASSNAME:org.h2.Driver}
 spring.datasource.username=${DB_USERNAME:sa}
 spring.datasource.password=${DB_PASSWORD:}
