Vehicle query functional

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${DB_UR:jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1}
+spring.datasource.url=${DB_UR:jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;TRACE_LEVEL_FIle=4}
 spring.datasource.driverClassName=${DB_DRIVER_CLASSNAME:org.h2.Driver}
 spring.datasource.username=${DB_USERNAME:sa}
 spring.datasource.password=${DB_PASSWORD:}
@@ -7,3 +7,5 @@ spring.h2.console.enabled=${CONSOLE_ENABLE:true}
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.initialization-mode=${DB_INITIALIZATION_MODE:embedded}
 spring.jpa.hibernate.ddl-auto=${JPA_HIBERNATE_AUTO:create-drop}
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
